Sun Mar 16 21:33:01 2014  Zachary Scott  <e@zzak.io>

	* lib/time.rb: [DOC] Fix timezone in example of Time.parse [Bug #9521]
	  Based on patch by @stomar

Sun Mar 16 13:21:40 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (DLDFLAGS): insert a space between option and its
	  argument for non-GCC compilers.  [ruby-core:61429] [Bug #9624]

Sun Mar 16 08:05:06 2014  Eric Wong  <e@80x24.org>

	* gc.c (objspace_xcalloc): fix GC accounting

Sun Mar 16 06:33:35 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* addr2line.c (fill_lines): return address is just after calling
	  address. Therefore noreturn function with tail call's return
	  address may be in another function.

Sun Mar 16 05:51:55 2014  Zachary Scott  <e@zzak.io>

	* lib/gserver.rb: [DOC] Fixed typo in example by @stomar [Bug #9543]

Sat Mar 15 18:54:03 2014  Kazuki Tsujimoto  <kazuki@callcc.net>

	* ext/.document: remove refinement from documentable directories.

Sat Mar 15 11:02:58 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (DLDFLAGS): check for each options to control
	  symbol resolution.  [ruby-core:61429] [Bug #9624]

Sat Mar 15 07:02:35 2014  Eric Wong  <e@80x24.org>

	* st.c (st_update): remove unnecessary assignment

Fri Mar 14 14:58:38 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* addr2line.c (fill_lines): fetch symbol names from ELF binary's
	  symbol table if it is built with cc -g and not stripped.
	  Now ruby can show static symbols on Linux though glibc's
	  backtrace_symbols(3) don't show them.

	* addr2line.c (rb_dump_backtrace_with_lines): use dladdr(3) to
	  detect what object file declares the symbol because
	  dl_iterate_phdr can't detect the main executable file
	  and codes on the stack.
	  NOTE: signal trampolines sometimes on the user stack. (FreeBSD)

	* addr2line.c (rb_dump_backtrace_with_lines): stop showing
	  backtrace if the function's name is main.
	  NOTE: FreeBSD's backtrace (libexecinfo) shows _start and